--- a/index.html
+++ b/index.html
@@ -108,18 +108,18 @@
 <section>
 <div class="rectangle">
     <div class="block">
-    <div class="navbar">Your Cart</div>
+    <div class="navbar">Your Orders</div>
     <div class="item">Item</div>
     <div class="qtyy">qty</div>
     <div class="unitp">Unit Price</div>
-    <div class="subt">Sub-total</div>
+    <div class="subt">Status</div>
             <div class="cart1">
                 <img class="img1st" src="./bon-vivant-qom5MPOER-I-unsplash 5.png" alt="">
                 <div class="heading1">Stir Fry Pasta</div>
                 <div class="rm">Remove</div>
                 <div class="qty">3</div>
                 <div class="unit_price">N 1,000.00</div>
-                <div class="sub_total">N 3,000.00</div>
+                <div class="sub_total">Delivered</div>
             </div>
             <div class="cart2">
                 <img class="img2nd" src="./bon-vivant-qom5MPOER-I-unsplash 5.png" alt="">
@@ -127,7 +127,7 @@
                 <div class="rm">Remove</div>
                 <div class="qty">3</div>
                 <div class="unit_price">N 1,000.00</div>
-                <div class="sub_total">N 3,000.00</div>
+                <div class="sub_total">Delivered</div>
             </div>
             <div class="cart3">
                 <img class="img3rd" src="./bon-vivant-qom5MPOER-I-unsplash 5.png" alt="">
@@ -135,7 +135,7 @@
                 <div class="rm">Remove</div>
                 <div class="qty">3</div>
                 <div class="unit_price">N 1,000.00</div>
-                <div class="sub_total">N 3,000.00</div>
+                <span><div class="sub_totall">Cooking</div></span>
             </div>
             <div class="cart4">
                 <img class="img4th" src="./bon-vivant-qom5MPOER-I-unsplash 5.png" alt="">
@@ -143,7 +143,7 @@
                 <div class="rm">Remove</div>
                 <div class="qty">3</div>
                 <div class="unit_price">N 1,000.00</div>
-                <div class="sub_total">N 3,000.00</div>
+                <span><div class="sub_totall">Cooking</div></span>
             </div>
         </div>
         <div class="total">Total:</div>
